fixed alignment of collapsing navbar

--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ body {
   padding: 20px 20px 50px 20px;
 }
 
+#navbarNavAltMarkup {
+  width: auto;
+}
+
 .img-fluid {
   margin: 20px 0;
 }
